2009-02-03 Steffen Kamper <info@sk-typo3.de>

	* Fixed bug #10332: MySQL keywords are not complete 

2009-01-23 Peter Foerger	<pfoerger@gmail.com>

	* Fixed bug #10161: 'blob' is also a reserved name/word

2009-01-11 Ingo Renner	<ingo3@typo3.org>

	* Release of EXT:kickstarter v0.4.0

	* made use of mod.php for backend modules the only available method for backend modules
	* removed translationsas they're provided from the translation server
	* set the status to "stable"

2008-12-22 Steffen Kamper <info@sk-typo3.de>

	* feature #9990: Enable option to use BE-module with docheader
	* feature #9988: Enable option to use BE-module with _DISPATCH

2008-11-08 Francois Suter <francois@typo3.org>

	* Corrected wrong reference to page id in example modfunc code

2008-11-05 Ingo Renner	<ingo3@typo3.org>

	* Updated contact email, year in copyright notices
	* Fixed bug #9168: 'character' is also a reserved name/word
	* Fixed bug #2357: "Max filesize allowed (kb)" cannot be changed
	* Fixed bug #6479: wrong field names for localization
	* Fixed bug #4974: Enlarge Description field to a textarea
	* Fixed bug #9272: Remove clear.gif from BE module generation
	* Fixed bug #9240: Value of default_sortby is TCA ctrl section is wrapped with double quotes

2008-11-04 Peter Foerger	<p.foerger@vke-design.de>

	* IRRE integration skipped. Option has been simply commented out, for ease of use to those who want to try out IRRE at it's basics…

2008-05-28 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 1045: Upper Value for field endtime is the 31.12.2020. Thanks to Steffen Mueller

2008-05-28 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 3334: RTE "Typical Basic Setup" should default to richtext[]. Thanks to Ernesto Baschny

2008-05-27 Peter Foerger	<p.foerger@vke-design.de>

	* FIX fixed bug 5339: t3lib_mgm::addServices should be placed in ext_localconf instead of ext_tables, Thanks to Nathan

2008-05-27 Peter Foerger	<p.foerger@vke-design.de>
